@@ -1,0 +1,18 @@
+.. _ref-sql-functions:
+.. module:: trytond.sql.functions
+
+SQL Functions
+=============
+
+.. class:: NumRange(lower, upper[, bounds])
+
+   A range of numeric.
+   ``bounds`` can be ``()``, ``(]``, ``[)`` (default) or ``[]``
+
+.. class:: TSRange(lower, upper[, bounds])
+
+   A range of timestamp.
+
+.. class:: DateRange(lower, upper[, bounds])
+
+   A range of date.
