@@ -1,0 +1,18 @@
+.. _ref-sql-operators:
+.. module:: trytond.sql.operators
+
+SQL Operators
+=============
+
+
+.. class:: RangeOperator(first, second)
+
+   Does the first range contain the second range or element?
+
+.. class:: RangeIn(first, second)
+
+   Is the first range or element contained in the second range?
+
+.. class:: RangeOverlap(first, second)
+
+   Does the ranges overlap, that is, have any elements in common?
