@@ -1,3 +1,4 @@
+* Support range functions and operators in EXCLUDE constraint
 * Add sparkline chart tools
 * Add setup methods to activate_modules
 * Add method to the backend to estimate number of rows
